nav bar: added nav bar

--- a/index.html
+++ b/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <title>Citi's Boutique</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=devicewidth, inicial-scale=1.0">
-    </head>
-    <body>
+
+<head>
+    <title>Citi's Boutique</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=devicewidth, inicial-scale=1.0">
+    <link href="style.css" rel="stylesheet">
+</head>
+
+<body>
+    <section class="home">
         <header>
             <nav>
                 <ul>
-                    <li>HOME</li>
-                    <li>PRODUTOS</li>
-                    <li>CONTATO</li>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">PRODUTOS</a></li>
+                    <li><a href="#">CONTATO</a></li>
                 </ul>
             </nav>
         </header>
-    </body>
-    <section class="home">
         <h1>Intensifique <br> o seu brilho</h1>
     </section>
+    
     <section class="produtos">
         <div id="anel"></div>
         <div id="relogio"></div>
@@ -32,5 +35,7 @@
     <footer>
         <p>Made with &#60;/&#62; and &#60;3 by trainee</p>
     </footer>
+
+</body>
 
 </html>
