--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
 <head>
     <title>Citi's Boutique</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=devicewidth, inicial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
     <section class="home">
         <header>
-            <nav>
+            <img src="/images/logo-branca.svg">
+            <nav id="nav-bar">
                 <ul>
                     <li><a href="#">HOME</a></li>
                     <li><a href="#">PRODUTOS</a></li>
@@ -19,9 +20,11 @@
                 </ul>
             </nav>
         </header>
+        <div id="slogan">
         <h1>Intensifique <br> o seu brilho</h1>
+        </div>
     </section>
-    
+
     <section class="produtos">
         <div id="anel"></div>
         <div id="relogio"></div>
@@ -34,8 +37,8 @@
 
     <footer>
         <p>Made with &#60;/&#62; and &#60;3 by trainee</p>
-    </footer>
-
+    </footer> 
+    
 </body>
 
 </html>
