produtos: added a produtos screen

--- a/index.html
+++ b/index.html
@@ -11,34 +11,69 @@
 <body>
     <section class="home">
         <header>
-            <img src="/images/logo-branca.svg">
+            <img src="./images/logo-branca.svg">
             <nav id="nav-bar">
                 <ul>
                     <li><a href="#">HOME</a></li>
-                    <li><a href="#">PRODUTOS</a></li>
+                    <li><a href="#produtos">PRODUTOS</a></li>
                     <li><a href="#">CONTATO</a></li>
                 </ul>
             </nav>
         </header>
         <div id="slogan">
-        <h1>Intensifique <br> o seu brilho</h1>
+            <h1>Intensifique <br> o seu brilho</h1>
+        </div>
+    </section>
+    
+    <section class="produtos" id="produtos">
+        <h2>PRODUTOS</h2>
+        <div class="caixas">
+            <div class="produtos-box">
+                <h3>Anel de diamante</h3>
+                <div class="caixa">
+                    <img src="./images/anel.png">
+                </div>
+                <button>Comprar</button>
+            </div>
+            <div class="produtos-box">
+                <h3>Relógio de ouro</h3>
+                <div class="caixa">
+                    <img src="./images/relogio.png">
+                </div>
+                <button>Comprar</button>
+            </div>
+            <div class="produtos-box">
+                <h3>Relógio de ouro</h3>
+                <div class="caixa">
+                    <img src="./images/colar.png">
+                </div>
+                <button>Comprar</button>
+            </div>
         </div>
     </section>
 
-    <section class="produtos">
-        <div id="anel"></div>
-        <div id="relogio"></div>
-        <div id="colar"></div>
-    </section>
-
-    <footer>
-
+    <footer class="contato" id="contato">
+        <img src="./images/logo-preta.svg">
+        <div class="contatos-info">
+            <div class="contatos-itens">
+                <img src="./images/phone.svg">
+                <p>81 3511-1259</p>
+            </div>
+            <div class="contatos-itens">
+                <img src="./images/email.svg">
+                <p>contato@ejoias.com</p>
+            </div>
+            <div class="contatos-itens">
+                <img src="./images/instagram.svg">
+                <p>contato@ejoias.com</p>
+            </div>
+        </div>
     </footer>
 
     <footer>
         <p>Made with &#60;/&#62; and &#60;3 by trainee</p>
-    </footer> 
-    
+    </footer>
+
 </body>
 
 </html>
