contact: added contact information

--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
     </section>
 
     <footer class="contato" id="contato">
-        <img src="./images/logo-preta.svg">
+        <img src="./images/logo-preta.svg" class="logo-preto" alt="logo-preto">
         <div class="contatos-info">
             <div class="contatos-itens">
                 <img src="./images/phone.svg">
-                <p>81 3511-1259</p>
+                <p class="contact-text">81 3511-1259</p>
             </div>
             <div class="contatos-itens">
                 <img src="./images/email.svg">
-                <p>contato@ejoias.com</p>
+                <p class="contact-text">contato@ejoias.com</p>
             </div>
             <div class="contatos-itens">
                 <img src="./images/instagram.svg">
-                <p>contato@ejoias.com</p>
+                <p class="contact-text">@ejoiasboutique</p>
             </div>
         </div>
     </footer>
