footer: added footer

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h1>Intensifique <br> o seu brilho</h1>
         </div>
     </section>
-    
+
     <section class="produtos" id="produtos">
         <h2>PRODUTOS</h2>
         <div class="caixas">
@@ -71,7 +71,7 @@
     </footer>
 
     <footer>
-        <p>Made with &#60;/&#62; and &#60;3 by trainee</p>
+        <p>Made with &#60;/&#62; and &#60;3 by Guilherme Xavier</p>
     </footer>
 
 </body>
