hambuguer navbar: added hamburger navbar

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 
 <body>
-    <section class="home">
+    <section class="home" id="home">
         <header>
             <img src="./images/logo-branca.svg">
             <nav id="nav-bar">
                 <ul>
-                    <li><a href="#">HOME</a></li>
+                    <li><a href="#home">HOME</a></li>
                     <li><a href="#produtos">PRODUTOS</a></li>
-                    <li><a href="#">CONTATO</a></li>
+                    <li><a href="#contato">CONTATO</a></li>
                 </ul>
             </nav>
         </header>
@@ -24,6 +24,24 @@
             <h1>Intensifique <br> o seu brilho</h1>
         </div>
     </section>
+
+    <div class="menu-wrap">
+        <input type="checkbox" class="toggler">
+        <div class="hamburger">
+            <div></div>
+        </div>
+        <div class="menu">
+            <div>
+                <div>
+                    <ul>
+                        <li><a href="#home">HOME</a></li>
+                        <li><a href="#produtos">PRODUTOS</a></li>
+                        <li><a href="#contato">CONTATO</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <section class="produtos" id="produtos">
         <h2>PRODUTOS</h2>
