now i added the message

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
+<!--ola, ficou um pouco mais feio do que eu gostaria, mas pf tenha compaixao, to no final do periodo com 4 cadeiras e fiquei
+sem muito tempo pra esse desafio :( -->
 <head>
     <title>Citi's Boutique</title>
     <meta charset="UTF-8">
